--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <h1 style="color:brown; text-align: center;">K M Tanmoy Arafat</h1>
     <center> <img src="./assets/images/arafat.jpg" alt="Arafat's Photo" height="150"/></center>
-    <p style="text-align: center;">I'm love to work. And I'm a love to share my knowledge.</p>
+    <p style="text-align: center;">I'm love to work And I'm a love to share my knowledge.</p>
     <hr />
     <h1 style="color: brown; text-align: center;">Education</h1>
     <hr />
     <p>
         <ul>
             <li>
-                I'm now a HSC(Collage) Student <br /> 2023 to present
+                I'm a Collage Student <br /> 2023 to present
             </li>
         </ul>
     </p>
